# cmake-xray

./: .clang-tidy  .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md
src/adapters/: CMakeLists.txt
src/adapters/cli/: atomic_report_writer.cpp  atomic_report_writer.h  cli_adapter.cpp  cli_adapter.h  cli_console_renderers.cpp  cli_console_renderers.h  cli_report_renderer.h  exit_codes.h  output_verbosity.h  placeholder_cli_adapter.cpp  placeholder_cli_adapter.h
src/adapters/input/: analysis_json_reader.cpp  analysis_json_reader.h  cmake_file_api_adapter.cpp  cmake_file_api_adapter.h  compile_commands_json_adapter.cpp  compile_commands_json_adapter.h  json_dependency_probe.cpp  json_dependency_probe.h  source_parsing_include_adapter.cpp  source_parsing_include_adapter.h
src/adapters/output/: console_compare_adapter.cpp  console_compare_adapter.h  console_report_adapter.cpp  console_report_adapter.h  dot_report_adapter.cpp  dot_report_adapter.h  html_report_adapter.cpp  html_report_adapter.h  impact_priority_text.h  include_text_helpers.h  json_compare_adapter.cpp  json_compare_adapter.h  json_report_adapter.cpp  json_report_adapter.h  markdown_compare_adapter.cpp  markdown_compare_adapter.h  markdown_report_adapter.cpp  markdown_report_adapter.h  placeholder_report_adapter.cpp  placeholder_report_adapter.h  target_display_support.cpp  target_display_support.h
src/hexagon/: CMakeLists.txt
src/hexagon/model/: analysis_configuration.h  analysis_report_snapshot.h  analysis_result.h  application_info.h  build_model_result.h  compare_result.h  compile_database_result.h  compile_database_status.h  compile_entry.h  diagnostic.h  impact_result.h  include_classification.h  include_filter_options.h  include_hotspot.h  include_resolution.h  observation_source.h  report_format_version.h  report_inputs.h  target_graph.h  target_info.h  translation_unit.h
src/hexagon/ports/driven/: .gitkeep  analysis_report_reader_port.h  build_model_port.h  compile_database_port.h  include_resolver_port.h  report_writer_port.h  target_metadata_port.h
src/hexagon/ports/driving/: .gitkeep  analyze_impact_port.h  analyze_project_port.h  compare_analysis_port.h  generate_report_port.h
src/hexagon/services/: analysis_support.cpp  analysis_support.h  compare_service.cpp  compare_service.h  compile_db_fingerprint.cpp  compile_db_fingerprint.h  diagnostic_support.cpp  diagnostic_support.h  impact_analyzer.cpp  impact_analyzer.h  project_analyzer.cpp  project_analyzer.h  report_generator.cpp  report_generator.h  startup_message_service.cpp  startup_message_service.h  target_graph_support.cpp  target_graph_support.h  target_graph_traversal.cpp  target_graph_traversal.h
tests/: CMakeLists.txt  requirements-json-schema.in  requirements-json-schema.txt  test_main.cpp  validate_doc_examples.py  validate_dot_reports.py  validate_dot_via_graphviz.sh  validate_html_reports.py  validate_json_schema.py  validate_manifest_parity.py  validate_verbosity_reports.py
tests/adapters/: test_analysis_json_reader.cpp  test_atomic_report_writer.cpp  test_cli_console_renderers.cpp  test_cmake_file_api_adapter.cpp  test_compare_text_adapters.cpp  test_compile_commands_json.cpp  test_console_report_adapter.cpp  test_dependency_boundaries.cpp  test_dot_report_adapter.cpp  test_html_report_adapter.cpp  test_json_compare_adapter.cpp  test_json_report_adapter.cpp  test_markdown_report_adapter.cpp  test_port_wiring.cpp  test_source_parsing_include_adapter.cpp
tests/adapters/fixtures/: console_quiet_broken_sample.txt  dot_broken_sample.dot  html_broken_sample.html  json_analyze_without_target_hubs_broken_sample.json  json_impact_v3_depth_effective_exceeds_requested_broken_sample.json  json_impact_v3_graph_distance_exceeds_requested_broken_sample.json  json_impact_v3_graph_distance_out_of_range_broken_sample.json  json_impact_v3_invalid_priority_class_broken_sample.json  json_impact_v3_missing_prioritized_broken_sample.json  json_impact_v4_graph_distance_exceeds_requested_broken_sample.json  json_impact_with_target_hubs_broken_sample.json  json_schema_rejects_format_version_two_broken_sample.json
tests/e2e/: cli_test_support.h  run_e2e.sh  run_e2e_artifacts.sh  run_e2e_lib.sh  run_e2e_smoke.sh  run_e2e_verbosity.sh  test_cli.cpp  test_cli_render_errors.cpp  test_cli_verbosity.cpp
tests/e2e/testdata/: .gitkeep
tests/e2e/testdata/command_and_arguments/: compile_commands.json
tests/e2e/testdata/empty_arguments_with_command/: compile_commands.json
tests/e2e/testdata/invalid_syntax/: compile_commands.json
tests/e2e/testdata/missing_fields/: compile_commands.json
tests/e2e/testdata/mixed_valid_invalid/: compile_commands.json
tests/e2e/testdata/not_an_array/: compile_commands.json
tests/e2e/testdata/only_command/: compile_commands.json
tests/hexagon/: test_analysis_support.cpp  test_compare_service.cpp  test_compile_db_fingerprint.cpp  test_impact_analyzer.cpp  test_m6_prerelease_version.cpp  test_m6_versionspin_consistency.cpp  test_project_analyzer.cpp  test_startup_message.cpp  test_target_graph_support.cpp  test_target_graph_traversal.cpp
tests/platform/: toolchain-minimums.json
tests/platform/cmake/: test_toolchain_minimums_accepts_current_gnu.cmake  test_toolchain_minimums_rejects_old_gnu.cmake  test_toolchain_minimums_rejects_unknown_compiler_id.cmake
tests/reference/: file-api-performance-manifest.json  generate_file_api_fixtures.sh  generate_reference_projects.py
tests/reference/scale_1000/: CMakeLists.txt  compile_commands.json
tests/reference/scale_1000/src/: unit_0002.cpp  unit_0005.cpp  unit_0006.cpp  unit_0007.cpp  unit_0010.cpp  unit_0012.cpp  unit_0013.cpp  unit_0016.cpp  unit_0020.cpp  unit_0021.cpp  unit_0022.cpp  unit_0030.cpp  unit_0031.cpp  (+700 more)
tests/reference/scale_250/: CMakeLists.txt  compile_commands.json
tests/reference/scale_500/: CMakeLists.txt  compile_commands.json
tests/release/: test_oci_image_smoke.sh  test_release_allowlist.sh  test_release_archive_repro.sh  test_release_dry_run.sh  test_validate_release_tag.sh
(+658 files in other folders)
